# blog-agent

./: README.md
backand/: .env.example  CLAUDE.md  README.md  TEMPLATE_README.md  langgraph.json  pyproject.toml
backand/.antigravity/resources/architecting/: act-template.md  cast-template.md
backand/.antigravity/resources/architecting/design/: node-specification.md  state-schema.md
backand/.antigravity/workflows/: architecting.md  developing.md  engineering.md  testing.md
backand/.claude/skills/architecting-act/: SKILL.md
backand/.claude/skills/architecting-act/resources/design/: edge-routing.md
backand/.claude/skills/architecting-act/resources/modes/: initial-design-questions.md
backand/.claude/skills/developing-cast/: SKILL.md
backand/.claude/skills/engineering-act/: SKILL.md
backand/.claude/skills/testing-cast/: SKILL.md
backand/casts/blog_writer/: CLAUDE.md  README.md  __init__.py  graph.py  pyproject.toml
backand/casts/blog_writer/modules/: conditions.py  models.py  nodes.py  prompts.py  state.py  tools.py  utils.py
backand/casts/chat/: README.md  __init__.py  graph.py  pyproject.toml
backand/casts/chat/modules/: conditions.py  models.py  nodes.py  prompts.py  tools.py  utils.py
backand/tests/cast_tests/: blog_writer_test.py  chat_test.py  conftest.py  test_blog_writer_nodes.py
