[project]
name = "backand"
version = "0.1.0"
description = "Backand powered by Act Operator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.1.3",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.0",
    "markdown>=3.10",
    "playwright>=1.57.0",
]

[dependency-groups]
test = [
    "pytest",
    "langgraph-cli[inmem]",
]
lint = [
    "pre-commit",
    "ruff",
]
dev = [
    "act-operator>=0.1.3",
    {include-group = "test"},
    {include-group = "lint"},
]

[tool.pyright]
include = ["casts", "tests"]
exclude = [
    "**/__pycache__/*", 
    ".venv", 
    "**/.venv"
]

[tool.uv.workspace]
members = ["casts/*"]
exclude = [
    "casts/__pycache__",
    "casts/**/__pycache__",
    "casts/**/.venv",
    "casts/.DS_Store",
]

[tool.ruff]
exclude = [
    "(^|/)(.venv|venv|node_modules|__pycache__|.pytest_cache|.ruff_cache|migrations|static|templates|.git|.github|.langgraph_api|media)(/|$)",
    "^tests(/|$)",
    "^unit_tests(/|$)",
    ".env",
    ".env.example",
    ".gitignore",
    "LICENSE",
    "README.md",
    "langgraph.json",
    "uv.lock"
]
lint.select = [
    "E",
    "F",
    "I",
    "B",
]
lint.ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B905"]
